# ragdoll

./: .gitignore  DOCLING_EVALUATION.md  MCP_SPEC.md  RAGDOLL_API_GUIDE.md  README.md  backfill_doc_summaries.py  env.ragdoll.example  etc-default-ragdoll-ingest.example  install-service.sh  migrate_chunk_roles.py  migrate_summaries_to_sources.py  pyproject.toml  ragdoll-api.service  ragdoll-ingest.service  ragdoll-mcp.service  ragdoll-web.service  rembed_all_chunks.py  requirements.txt  restart.sh  run_api.py  run_ingest.py  run_web.py  strip_summaries.py  sync-to-ragdoll-repo.sh
.cursor/rules/: git-push.mdc
ragdoll_ingest/: __init__.py  __main__.py  action_log.py  api.py  artifacts.py  chunk_csv.py  chunker.py  cli.py  config.py  csv_import.py  embedder.py  extractors.py  extractors_docling.py  garbage_control.py  interpreters.py  mcp_server.py  memory.py  router.py  storage.py  watcher.py
web/: __init__.py  app.py
web/static/: index.html
